tests/proph/list_std_proph.stderr
error: expected `<`
   --> ../tests/proph/list_std_proph.rs:176:25
    |
176 |              || (exists (current != Seq::empty()) && (proph == current.tail()) && (ret_repr == Some(current.head())))$ }
    |                         ^

error[E0432]: unresolved import `gilogic::prophecies::with_freeze_lemma_for_mutref`
 --> ../tests/proph/list_std_proph.rs:7:40
  |
7 |     prophecies::{Ownable, Prophecised, with_freeze_lemma_for_mutref},
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `with_freeze_lemma_for_mutref` in `prophecies`

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _4
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _1
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _1
[TIMESTAMP DEBUG lib_rtg::logic] Extract lemma needs to be properly handled
warning: unused variable: `list`
  --> ../tests/proph/list_std_proph.rs:64:33
   |
64 | fn extract_head<'a, T: Ownable>(list: &'a mut LinkedList<T>);
   |                                 ^^^^ help: if this is intentional, prefix it with an underscore: `_list`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0425]: cannot find function `list_ref_mut_htl` in this scope
  --> ../tests/proph/list_std_proph.rs:60:12
   |
60 |     from { list_ref_mut_htl(list, m, head, tail, len) }
   |            ^^^^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
   --> ../tests/proph/list_std_proph.rs:55:1
    |
55  | / #[extract_lemma(
56  | |     forall head, tail, len, p.
57  | |     model m.
58  | |     extract model mh.
...   |
62  | |     prophecise { m.tail().prepend(mh) }
63  | | )]
    | |  ^
    | |  |
    | |__expected `Prophecy<_>`, found `()`
    |    arguments to this function are incorrect
    |
    = note: expected struct `gilogic::prophecies::Prophecy<_>`
            found unit type `()`
note: method defined here
   --> /Users/sacha/Prog/work/rust-to-gil/gilogic/src/prophecies.rs:182:8
    |
182 |     fn with_prophecy(self, pcy: Prophecy<P>) -> Self;
    |        ^^^^^^^^^^^^^
    = note: this error originates in the attribute macro `extract_lemma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Predicate body failed to typecheck for DefId(0:52 ~ list_std_proph[4767]::extract_head_spec_4dac9aa0_f6da_4394_9346_2b394c608b38) ErrorGuaranteed(())

error: aborting due to 5 previous errors; 1 warning emitted

Some errors have detailed explanations: E0308, E0425, E0432.
For more information about an error, try `rustc --explain E0308`.
